2010-01-08  Romain Francois <francoisromain@free.fr>

	* src/Rcpp/Pairlist.h: Pairlist gains a push_back method

	* src/Rcpp/Language.h: idem for Language

2010-01-07  Romain Francois <francoisromain@free.fr>

	* src/Rcpp/Pairlist.h: gains a push_front method

	* src/Rcpp/wrap.h : now the result type of the various wrap 
	functions depends on the parameters. wrap( bool ) makes a
	LogicalVector, etc ... wrap(SEXP) dispatches to the 
	appropriate Rcpp:: class depending on TYPEOF

	* src/Rcpp/RObject.h: added methods "isS4", "slot" 
	and "hasSlot" to deal with S4 objects
	* inst/unitTests/runit.S4.R: unit tests

	* src/Rcpp/ComplexVector.h: new class Rcpp::ComplexVector
	to manage ... complex vectors (CPLXSXP)
	* src/ComplexVector.cpp: implementation
	* inst/unitTests/runit.ComplexVector.R: unit tests

	* src/Rcpp/Promise.h: new class Rcpp::Promise to manage
	promises (PROMSXP). only read access so far (no way to force
	the promise)
	* src/Promise.cpp: implementation

	* src/Rcpp/RObject.h: the result of attr is now an RObject
	rather than a SEXP. This does not change previous behavior
	because of the implicit conversion

	* src/Rcpp/ExpressionVector.h: new class Rcpp::ExpressionVector
	which shares a lot with GenericVector.
	* src/ExpressionVector.cpp: implementation
	* inst/unitTests/runit.ExpressionVector.R: unit tests

	* src/Rcpp/CharacterVector.h: new class Rcpp::CharacterVector
	to manage character vectors (STRSXP). StringVector is a 
	convenience typedef equivalent to CharacterVector
	* src/CharacterVector.cpp: implementation
	* inst/unitTests/runit.CharacterVector.R: unit tests

	* src/Rcpp/WeakReference.h: new class Rcpp::WeakReference
	to wrap WEAKREFSXP with accessors to the key and value
	* src/WeakReference.cpp: implementation

	* src/Rcpp/Rcpp_Rinternals.h: borrowed from Rinternals so that
	we can use VECTOR_PTR (which R forbids unless we define
	USE_RINTERNALS, but defining it disables NO_R_REMAP)
